Ticket: #FT-371 SubTicket: # Component: Changes: 1.Fix the wrong font.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/dataentry.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/dataentry.less
@@ -445,10 +445,10 @@ body .document-dataentry.page-level-message-container {
 }
 
 .document-dataentry .edit-title {
-	font-family: Arial;
+	font-family: "SourceSansPro-Bold";
 	font-weight: bold;
 	color: @systemColor;
-	font-size: 24px;
+	font-size: 28px;
 	margin: 0 6px 0 4px;
 }
 
