--- a/TripfinderWeb/TripfinderWeb/Global/Css/main.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/main.less
@@ -17,7 +17,7 @@ body {
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	background: white;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-family:"SourceSansPro-Regular",Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 12px;
 }
 
@@ -1372,7 +1372,7 @@ label.requirestar::after {
 	font-size: 12px;
 	border: 0;
 	padding: 0;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-family: "SourceSansPro-Regular",Arial, "Helvetica Neue", Helvetica, sans-serif;
 	word-break: normal;
 	white-space: pre-wrap;
 }
