--- a/TripfinderWeb/TripfinderWeb/Global/Css/viewform.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/viewform.less
@@ -620,7 +620,7 @@ fieldset[disabled] .view .btn-black:focus {
 
 		.header {
 			font-size: 12px;
-			font-family: Arial;
+			font-family: "SourceSansPro-Regular",Arial;
 			border: solid 1px #ccc;
 			color: #ccc;
 			background-color: #4B4B4B;
@@ -651,7 +651,7 @@ fieldset[disabled] .view .btn-black:focus {
 
 		.body {
 			font-size: 12px;
-			font-family: Arial;
+			font-family: "SourceSansPro-Regular",Arial;
 			color: #2e2e2e;
 			height: 320px;
 			border: 1px solid #ccc;
@@ -821,7 +821,7 @@ fieldset[disabled] .view .btn-black:focus {
 
 		.scrollable-header {
 			font-size: 12px;
-			font-family: Arial;
+			font-family: "SourceSansPro-Regular",Arial;
 			border: solid 1px #ccc;
 			color: #ccc;
 			background-color: #4B4B4B;
@@ -862,7 +862,7 @@ fieldset[disabled] .view .btn-black:focus {
 
 		.scrollable-body {
 			font-size: 12px;
-			font-family: Arial;
+			font-family: "SourceSansPro-Regular",Arial;
 			color: #2e2e2e;
 			height: 320px;
 			border: 1px solid #ccc;
